--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 		
 		</style>
         <script src="index.js" defer></script>
+        
 
+       
 </head>
 
 <body>
 <header>
-    <form action="index.html" name="form1">
+    <form name="form1" action="index.html">
         <input type="text" size="100" id="1" name="name">  <button height="22px" width="22px"  onclick="f1()"><img src="search.jpg"></button>
             </form>
         </header>
@@ -55,9 +57,9 @@
                 <br><br>
                 <font color="black"<p id="outt"><p> </font>   <button height="22px" width="22px"><img src="search.jpg"></button>
                     <button><img src="1.png" height="15px" width="15px"></button><br><br>
-                    <font color="black"<p id="out"><p> </font>    <button height="22px" width="22px"><img src="search.jpg"></button>
+                    <font color="black"<p id="out2"><p> </font>    <button height="22px" width="22px"><img src="search.jpg"></button>
                         <button><img src="1.png" height="15px" width="15px"></button><br><br>
-                        <font color="black"<p id="out"><p> </font>   <button height="22px" width="22px"><img src="search.jpg"></button>
+                        <font color="black"<p id="out3"><p> </font>   <button height="22px" width="22px"><img src="search.jpg"></button>
                             <button><img src="1.png" height="15px" width="15px"></button>
                             <br><br>
                 </div>
